Icon search (home page) +  cards int the home page

--- a/Resourse/CSS/Style.css
+++ b/Resourse/CSS/Style.css
@@ -171,6 +171,12 @@
         background-size: cover !important;
       }
 
+
+
+      .fas{
+                 margin-top: 25px;
+                 width: 40px;
+      }
  
 
     
