--- a/Resourse/CSS/Login.css
+++ b/Resourse/CSS/Login.css
@@ -8716,7 +8716,12 @@ body {
   line-height: 1.5;
   color: #6c7293;
   text-align: left;
-  background-color: #fff;
+  
+    background-image: url(../../Resourse/images/BackLogin.jpg) !important;
+    background-size: cover !important;
+    background-size: 100%;
+
+
 }
 
 [tabindex="-1"]:focus {
@@ -21949,7 +21954,7 @@ dl li {
 }
 
 .main-panel {
-  background: #f0f3f6;
+  
   width: 100%;
   transition: width 0.25s ease, margin 0.25s ease;
   min-height: calc(100vh - 56px);
@@ -22849,10 +22854,7 @@ dl li {
 }
 
 /*upload btn*/
-body
-{
-  background-color:#f5f5f5;
-}
+
 .imagePreview {
     width: 100%;
     height: 180px;
@@ -22995,3 +22997,4 @@ body
     margin-top: 1px;
     margin-left: 10px;
 }
+
