--- a/Resourse/CSS/Style.css
+++ b/Resourse/CSS/Style.css
@@ -102,10 +102,15 @@
 
 
       .ui.card{
-        margin-left: 340px;
+       
         margin-top: 70px;
         width: 669px;
         height: 70px;
+      }
+      .row.search{
+        
+        margin-top: 70px;
+       
       }
       .ui.fluid.icon.input{
         width: 669px;
@@ -171,14 +176,13 @@
         background-image: url(../images/back2.jpg) !important;
         background-size: cover !important;
       }
-
-
+   
 
       .fas{
                  margin-top: 25px;
                  width: 50px;
-                 background-size: 100% 100%;
                  color:blueviolet;
+                 border: transparent;
                  font-size: 18px;
       }
  
