--- a/Resourse/css2/register.css
+++ b/Resourse/css2/register.css
@@ -8716,7 +8716,8 @@
     line-height: 1.5;
     color: #6c7293;
     text-align: left;
-    background-color: #fff;
+    background-image: url(../../Resourse/images/BackLogin.jpg) !important;
+    background-size: cover !important;
   }
   
   [tabindex="-1"]:focus {
@@ -8813,11 +8814,8 @@
   }
   
   a:hover {
-   background-color:#5958580d;
-   color:rgba(0,0,0,.87);
-   border-radius: 10px;
-   font-weight:700;
-      
+    color: #0056b3;
+    text-decoration: underline;
   }
   
   a:not([href]):not([tabindex]) {
@@ -8855,6 +8853,7 @@
   img {
     vertical-align: middle;
     border-style: none;
+    margin-left: 90px;
   }
   
   svg {
@@ -9245,8 +9244,18 @@
   .row {
     display: flex;
     flex-wrap: wrap;
+  
     margin-right: -15px;
     margin-left: -15px;
+  }
+  .rowR {
+    display: flex;
+    flex-wrap: wrap;
+    width: 200px;
+    margin-left: 480px;
+   
+    /*margin-right: -15px;
+    margin-left: -15px;*/
   }
   
   .no-gutters {
@@ -9465,8 +9474,8 @@
       max-width: 8.33333%;
     }
     .col-sm-2 {
-      flex: 0 0 16.66667%;
-      max-width: 16.66667%;
+      flex: 0 0 30.66667%;
+      max-width: 30.66667%;
     }
     .col-sm-3 {
       flex: 0 0 25%;
@@ -9476,6 +9485,7 @@
       flex: 0 0 33.33333%;
       max-width: 33.33333%;
     }
+   
     .col-sm-5 {
       flex: 0 0 41.66667%;
       max-width: 41.66667%;
@@ -9494,7 +9504,8 @@
     }
     .col-sm-9 {
       flex: 0 0 75%;
-      max-width: 75%;
+      max-width: 55%;
+      margin-left: 350px;
     }
     .col-sm-10 {
       flex: 0 0 83.33333%;
@@ -10373,7 +10384,7 @@
     color: #495057;
     background-color: #ffffff;
     background-clip: padding-box;
-    border: 1px solid #484949;
+    border: 1px solid #ced4da;
     border-radius: 2px;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   }
@@ -10534,10 +10545,12 @@
     position: absolute;
     margin-top: 0.3rem;
     margin-left: -1.25rem;
+    
   }
   
   .form-check-input:disabled ~ .form-check-label {
-    color: #a7afb7;
+    color: #4b4d4e;
+    
   }
   
   .form-check-label {
@@ -10943,6 +10956,11 @@
   }
   
   .btn-primary {
+    color: #fff;
+    background-color: #464dee;
+    border-color: #464dee;
+  }
+  .btn.btn.X{
     color: #fff;
     background-color: #464dee;
     border-color: #464dee;
@@ -11584,9 +11602,8 @@
     z-index: 1000;
     display: none;
     float: left;
-    min-width: 20rem;
-    padding: 1rem 0;
-  
+    min-width: 10rem;
+    padding: 0.5rem 0;
     margin: 0.125rem 0 0;
     font-size: 1rem;
     color: #6c7293;
@@ -11596,7 +11613,6 @@
     background-clip: padding-box;
     border: 1px solid #f1f6f8;
     border-radius: 0.25rem;
-    
   }
   
   .dropdown-menu-left {
@@ -11767,7 +11783,7 @@
   .dropdown-item:hover, .dropdown-item:focus {
     color: #16181b;
     text-decoration: none;
-    background-color: #ffffff;
+    background-color: #eaeaf1;
   }
   
   .dropdown-item.active, .dropdown-item:active {
@@ -13068,6 +13084,7 @@
   .card-body {
     flex: 1 1 auto;
     padding: 1.25rem;
+   
   }
   
   .card-title {
@@ -14444,7 +14461,7 @@
   .bs-tooltip-bottom .arrow::before, .bs-tooltip-auto[x-placement^="bottom"] .arrow::before {
     bottom: 0;
     border-width: 0 0.4rem 0.4rem;
- /*   border-bottom-color: #000;*/
+    border-bottom-color: #000;
   }
   
   .bs-tooltip-left, .bs-tooltip-auto[x-placement^="left"] {
@@ -14754,29 +14771,18 @@
   
   .carousel-control-prev-icon,
   .carousel-control-next-icon {
-
     display: inline-block;
-    width: 18px;
-    height: 18px;
-   /* background: no-repeat 50% / 100% 100%;*/
-   background-color: black;
-   border-radius: 100px;
+    width: 20px;
+    height: 20px;
+    background: no-repeat 50% / 100% 100%;
   }
   
   .carousel-control-prev-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e");
-    background-size: 10px 10px;
-    background-repeat: no-repeat;
-    display: block;
-    background-position: center; 
   }
   
   .carousel-control-next-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e");
-    background-size: 10px 10px;
-    background-repeat: no-repeat;
-    display: block; 
-    background-position: center; 
   }
   
   .carousel-indicators {
@@ -18362,6 +18368,7 @@
     -moz-box-shadow: none;
     box-shadow: none;
     outline: 0;
+  
   }
   
   a,
@@ -18374,6 +18381,7 @@
   p,
   span {
     text-shadow: none;
+   /* width: 100%;*/
   }
   
   [type=button]:focus,
@@ -19710,7 +19718,6 @@
     color: #ffffff;
     background-color: #464dee;
     border-color: #464dee;
-    
   }
   
   .btn-primary, .btn-primary:hover {
@@ -20255,11 +20262,13 @@
   
   .card .card-body {
     padding: 1.875rem 1.875rem;
+  
   }
   
   @media (max-width: 991px) {
     .card .card-body {
       padding: 1.5rem;
+      
     }
   }
   
@@ -20407,13 +20416,16 @@
     margin-left: 1.75rem;
     font-size: 1rem;
     line-height: 1.5;
+    font-weight: bold;
   }
   
   .rtl .form-check .form-check-label {
     margin-left: 0;
     margin-right: 1.75rem;
   }
-  
+  .form-check-label input[type=radio] {
+    display: inline;
+  }
   .form-check .form-check-label input {
     position: absolute;
     top: 0;
@@ -20424,6 +20436,7 @@
     cursor: pointer;
     opacity: 0;
     filter: alpha(opacity=0);
+  
   }
   
   .rtl .form-check .form-check-label input {
@@ -20724,10 +20737,12 @@
   .form-control, .typeahead,
   .tt-query,
   .tt-hint {
-    border: 1px solid #A7A6AB;
+    border: 1px solid rgb(176, 176, 177);
     font-weight: 400;
     font-size: 0.875rem;
     height: auto;
+    width: 475px;
+    height:40px;
   }
   
   select.form-control, select.typeahead,
@@ -20846,6 +20861,8 @@
     line-height: 1.4rem;
     vertical-align: top;
     margin-bottom: .5rem;
+    font-weight: bold;
+    max-width: 100%;
   }
   
   .form-group.has-danger .form-control, .form-group.has-danger .typeahead,
@@ -21106,7 +21123,7 @@
   
   .nav-tabs.nav-tabs-vertical-custom .nav-link {
     background: transparent;
-    border-color: rgba(37, 37, 37, 0.2);
+    border-color: rgba(255, 255, 255, 0.2);
     color: #0d128e;
     font-weight: 600;
     padding: 1.75rem;
@@ -21114,7 +21131,7 @@
   
   .nav-tabs.nav-tabs-vertical-custom .nav-link.active {
     color: #ffffff;
-    border-color: rgba(2, 2, 2, 0.2);
+    border-color: rgba(255, 255, 255, 0.2);
   }
   
   .nav-tabs.tab-no-active-fill .nav-item {
@@ -21923,6 +21940,7 @@
     background: transparent;
     border-radius: 0;
     font-size: .9375rem;
+    width:320px;
   }
   
   .auth form .auth-form-btn {
@@ -21964,7 +21982,7 @@
   }
   
   .main-panel {
-    background: #f0f3f6;
+  
     width: 100%;
     transition: width 0.25s ease, margin 0.25s ease;
     min-height: calc(100vh - 56px);
@@ -21995,13 +22013,12 @@
   .horizontal-menu .top-navbar {
     font-weight: 400;
     background: #ffffff;
-    border-bottom: 1px solid #d8d8d8;
+    border-bottom: 1px solid #f1f6f8;
   }
   
   .horizontal-menu .top-navbar .navbar-brand-wrapper {
     width: auto;
     height: 78px;
-    
   }
   
   .horizontal-menu .top-navbar .navbar-brand-wrapper .navbar-brand {
@@ -22011,21 +22028,18 @@
     margin-right: 0;
     padding: .25rem 0;
     text-align: left;
-    
   }
   
   .horizontal-menu .top-navbar .navbar-brand-wrapper .navbar-brand.brand-logo-mini {
     display: none;
     padding-left: 0;
     text-align: center;
-    
   }
   
   .horizontal-menu .top-navbar .navbar-brand-wrapper .navbar-brand.brand-logo-mini img {
     width: 50px;
     max-width: 100%;
     margin: auto;
-    
   }
   
   .horizontal-menu .top-navbar .navbar-brand-wrapper .navbar-brand:active, .horizontal-menu .top-navbar .navbar-brand-wrapper .navbar-brand:focus, .horizontal-menu .top-navbar .navbar-brand-wrapper .navbar-brand:hover {
@@ -22037,7 +22051,6 @@
     height: 24px;
     margin: auto;
     vertical-align: middle;
-    
   }
   
   @media (max-width: 991px) {
@@ -22065,7 +22078,6 @@
     height: 78px;
     -webkit-flex-grow: 1;
     flex-grow: 1;
-   
   }
   
   @media (max-width: 991px) {
@@ -22191,11 +22203,11 @@
   .horizontal-menu .top-navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .input-group-text {
     background: transparent;
     border: 0;
-    color: #000000;
+    color: #d8d8d8;
     padding: 0;
   }
   
-  .horizontal-menu .top-navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .form-control, .horizontal-menu .top-navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .typeahead,
+  .horizontal-menu .top-navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .textarea .form-control, .horizontal-menu .top-navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .typeahead,
   .horizontal-menu .top-navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .tt-query,
   .horizontal-menu .top-navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .tt-hint {
     margin-left: .5rem;
@@ -22840,21 +22852,22 @@
   
   /* accordion css */ 
   .accordion {
-    background-color: #d8d8d8;
-    color: #444;
+    background-color: #0dccac;
+    color: rgb(255, 255, 255);
     cursor: pointer;
     padding: 18px;
     width: 100%;
     text-align: left;
-    border: none;
     outline: none;
     transition: 0.4s;
-   
+    font-weight: bold;
+    font-size: 14px;
   }
   
   /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-  .active, .accordion:hover {
-    background-color: #ccc;
+  .accordion:hover {
+  /*  background-color: #ccc;*/
+  background-color: #0ba88e;
   }
   
   /* Style the accordion panel. Note: hidden by default */
@@ -23004,7 +23017,6 @@
       margin: 0 0 0 15px;
   }
   
-
   
   /*forms css*/
   
@@ -23012,185 +23024,106 @@
     margin-left: 60px;
     margin-right: 60px;
   }
-/**/
-  .bottom-navbar{
-     height: 50px;
-   
-  }
-  .horizontal-menu .bottom-navbar {
-    font-weight: 400;
-    background: #ffffff;
-    border-bottom: 1px solid #dad7d7;
-  }
-  .navbar-menu-wrapper.d-flex.align-items-center.justify-content-between{
-      border-bottom: 3px;
-      border-color: black;
-  }
-  /*btns head*/
   
- 
- .itemXE{
-  font-size: 0.937rem;
-  font-weight: 600;
-  color: black;
-    font-weight: 600;
-    margin-right: .5rem;
-    font-size: 14px;
- }
- .dropdown-toggle.show-dropdown-arrow.btn.btn-inverse-primary.btn-sm{
-     margin-top: 4px;
-     margin-bottom: 4px;
- }
- .footer{
-   background-color: #006AFF;
-   margin-bottom: -15px;
-   border-radius: 3px;
- }
- .btn.btn-dark{
-   margin-top: 10px;
-   margin-left: 180px;
- }
-
-
-
- /*Radio btn on Nbr personne Style  */
- .switch-field {
-  display: run-in;
-	margin-bottom: 36px;
- margin-top: 20px;
-
-}
-
-.switch-field input {
-	position: absolute !important;
-	clip: rect(0, 0, 0, 0);
-	height: 1px;
-	width: 1px;
-
-
-}
-
-.switch-field label {
-	background-color: #e4e4e4;
-	
-	font-size: 14px;
-	line-height: 1;
-	text-align: center;
-	padding: 8px 16px;
-	margin-right: -1px;
-
-
-  border-width: 1px !important;
-  border-color: rgb(82, 81, 81) !important;
-  border-style: solid !important;
-  transition: all 0.1s ease-in-out;
   
-  background:#FFF;
-color:#54545A;
-border-color:rgb(0, 0, 0);
-border-radius: 0;
-
+  #row{
+      margin-left: 500px;
+      margin-right: 400px;
   
-}
-
-.switch-field label:hover {
-	cursor: pointer;
-}
-
-.switch-field input:checked + label {
-	background: linear-gradient(to top,rgb(20, 81, 167),#0D4599);
-  box-shadow: none;
-  color: white;
-}
-
-.switch-field label:first-of-type {
-	border-radius: 4px 0 0 4px;
-}
-
-.switch-field label:last-of-type {
-	border-radius: 0 4px 4px 0;
-}
-
-/* This is just for CodePen. */
-
-.form {
-	max-width: 600px;
-	font-family: "Lucida Grande", Tahoma, Verdana, sans-serif;
-	font-weight: normal;
-	line-height: 1.625;
-	margin: 8px auto;
-	padding: 16px;
-}
-
-h2 {
-	font-size: 18px;
-	margin-bottom: 8px;
-}
-
-
-
-
-
-/* --- Product Card ---- */
-
-.carousel-inner .carousel-item .d-block.w-100{
- width:285.25px ;
- height:190.167px ;
-}
-
-.grid { 
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(285.25px, 2fr));
-  grid-gap: 20px;
-  align-items: stretch;
-  margin-top: 20px;
-  margin-left: 10px;
-  margin-right: 10px;
+      position: relative;
+     
   }
-.grid > article {
-  border: 1px solid #ccc;
-  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
-}
-.grid > article img {
-  width:285.25px ;
-  height:190.167px ;
-}
-.text {
-  padding: 0 20px 20px;
-}
-.text > button {
-  background: gray;
-  border: 0;
-  color: white;
-  padding: 10px;
-  width: 100%;
+  
+  .btns{
+    margin-top: 20px;
+    margin-left: 550px;
+    margin-bottom: 20px;
   }
-
-  .card-title{
-    color:#343a40;
-    font-weight: 600px;
-    font-weight: bold;
-    font-size: 18px;
-    font-family: inherit;
+  /*
+  .form-brdr{
+    border-width: 29px;
+    border-color: red;
+    border-style: solid;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 150px;
+    margin-right: 150px;
+  }*/
+  
+  /*
+  .form-control.dropdown-menu{
+    background-color: white;
+    
+    position: relative;
+    margin-bottom: 1500px;
+  }*/
+  .radioEq{
+    position: relative !important;
+    display:list-item;
+  
+    background-color: white;
+    border: 1px;
+  border-color: black;
+  width: 475px;
+  margin-bottom: 150px;
   }
-  .cpara{
-       color:#343a40;
-    font-weight: 600px;
-    font-weight: bold;
-    font-size: 14px;
-    font-family: inherit;
+  .force-scroll {
+  
+  overflow-y: scroll;
+  
+  height: 200px;
+  
   }
-  .card-text{
-    color:#343a40;
-    font-weight: 600px;
-    font-weight: bold;
-    font-size: 14px;
-    font-family: inherit;
+   /* Dropdown Button */
+   .dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
   }
-  .CA{
-    color: #464dee;
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
   }
-
-  .rightSh{
-    margin-right: 60px;
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 18px 20px;
+    text-decoration: none;
+    display: block;
+    margin-bottom: 150px;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #a7a8a7;} 
+  .msg_err{
+    color: brown;
+    font-family: Roboto ;
+    border-top: 1px;
+    border-left:7px;
+  }
+  .form-group-err {
+      margin-bottom: 4px;
+      margin-top: 1px;
+      margin-left: 10px;
   }
