--- a/Resourse/CSS/Style.css
+++ b/Resourse/CSS/Style.css
@@ -181,7 +181,7 @@
       .fas{
                  margin-top: 25px;
                  width: 50px;
-                 color:blueviolet;
+                 color:#464dee ;
                  border: transparent;
                  font-size: 18px;
       }
