--- a/Resourse/cssSm/style.css
+++ b/Resourse/cssSm/style.css
@@ -3045,7 +3045,7 @@ html .ui-button.ui-state-disabled:active {
 }
 
 .product-page-main {
-	background: #f4f9fd;
+	background: #fff;
 }
 
 .prod-page-title {
@@ -3092,8 +3092,10 @@ html .ui-button.ui-state-disabled:active {
 
 .md-prod-page-in {
 	padding: 11px;
-	background: #fff;
+	border-top: 1px solid rgb(214, 214, 214) !important;
 	border-bottom: 1px solid #f5f5f5;
+	border-right: 1px solid rgb(214, 214, 214) !important;
+	border-left: 1px solid rgb(214, 214, 214) !important;
 }
 
 .pof-text {}
@@ -3156,7 +3158,7 @@ html .ui-button.ui-state-disabled:active {
 }
 
 .preview-pic.tab-content {
-	border: 3px solid #ddd;
+	border: 1px solid #0b68e3;
 	width: 99%;
 	margin: 0.5%;
 }
@@ -3202,7 +3204,10 @@ html .ui-button.ui-state-disabled:active {
 	padding-left: 11px;
 	padding-right: 11px;
 	padding-bottom: 10px;
-	background: #fff;
+	/*! background: #fff; */
+	border-right: 1px solid rgb(214, 214, 214) !important;
+	border-left: 1px solid rgb(214, 214, 214) !important;
+	border-bottom: 1px solid rgb(214, 214, 214) !important;
 }
 
 .description-box h4 {
@@ -3223,12 +3228,14 @@ html .ui-button.ui-state-disabled:active {
 }
 
 .description-box h5 {
-	font-size: 13px;
-	font-weight: 700;
+	font-size: 18px;
+	/*! font-weight: 700; */
 	padding-bottom: 0px;
 	line-height: 34px;
-	color: #585858;
-	border-right: 1px solid #eeeeee;
+	color: rgb(72, 72, 72) !important;
+	/*! border-right: 1px solid #eeeeee; */
+	font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif !important;
+	font-weight: 100;
 }
 
 .spe-a {
@@ -3245,7 +3252,7 @@ html .ui-button.ui-state-disabled:active {
 }
 
 .spe-a ul li {
-	border-bottom: 1px solid #eeeeee;
+	/*! border-bottom: 1px solid #eeeeee; */
 }
 
 .spe-a ul li .col-md-4 {
@@ -3289,18 +3296,21 @@ html .ui-button.ui-state-disabled:active {
 .price-box-right {
 	-webkit-box-shadow: 0 6px 10px -5px rgba(0, 0, 0, 0.1);
 	box-shadow: 0 6px 10px -5px rgba(0, 0, 0, 0.1);
-	padding: 23px;
-	background: #fff;
+	padding: 45px;
+	height: 300px;
+	width: 300px;
+	border:1px solid rgb(214, 214, 214) !important;
+	/*background: #fff;*/
 }
 
 .price-box-right .select2-container--default .select2-selection--single {
-	border: 1px solid #dde1e0;
+	border: 2px solid #131313;
 	height: auto;
 	min-height: 30px;
 }
 
 .price-box-right .select2-container--default .select2-selection--single .select2-selection__arrow {
-	border: 1px solid #bdc1c2;
+	border: 1px solid #252525;
 	height: 28px;
 	top: 4px;
 	right: 5px;
@@ -3415,5 +3425,35 @@ html .ui-button.ui-state-disabled:active {
 
 
 /*my shit */
+.equipment{
 
+    color: #464dee !important;
+font-style: inherit !important;
+font-variant: inherit !important;
+font-weight: bold !important;
+font-stretch: inherit !important;
+font-size:  16px !important;
+line-height: inherit !important;
+font-size-adjust: inherit !important;
+font-kerning: inherit !important;
+font-optical-sizing: inherit !important;
+font-language-override: inherit !important;
+font-feature-settings: inherit !important;
+font-variation-settings: inherit !important;
+font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif !important;
+text-decoration: none !important;
+-moz-appearance: none !important;
+background: transparent none repeat scroll 0% 0% !important;
+border: 0px none !important;
+cursor: pointer !important;
+margin: 0px !important;
+padding: 0px !important;
+user-select: auto !important;
+text-align: left !important;
+    font-weight: bold;
+}
+.equipment:hover{
+	text-decoration: var(--font-link-text-decoration-hover, underline) !important;
+    color: var(--color-text-link-hover, #4a50e4 ) !important;
+}
 
