--- a/Resourse/cssSm/style.css
+++ b/Resourse/cssSm/style.css
@@ -3553,7 +3553,13 @@ margin-top: 12px;
 		  left:2px;
 	  }
 
+/*Map style*/
+#map{
+	height:400px;
+	width:100%;
+}
 
-
-
+.cmt{
+	width: 70%;
+}
 	  
