--- a/Resourse/cssSm/style.css
+++ b/Resourse/cssSm/style.css
@@ -41,11 +41,28 @@
 -------------------------------------------------------------*/
 .img-prev{
 	width: 100%;
-	max-height: 99px;
+	max-height: 90px;
 }
 .img-main{
 	width: 100%;
-	max-height: 410px;
+	max-height: 400px;
+}
+.img-responsives{
+	max-width: 100%;
+	height: 200px;
+}
+.div-disp
+{
+	max-width: 300px;
+	
+}
+.div-prev
+{
+	 
+	max-height:130px;
+    overflow:scroll;
+    overflow-y: hidden;
+    
 }
 body {
 	font-family: 'Raleway', sans-serif;
@@ -3570,3 +3587,17 @@ margin-top: 12px;
 	width: 70%;
 }
 	  
+.ff{
+	font-size: 15px;
+}
+#no-cmt-img{
+	margin-left: 35%;
+}
+#no-cmt-txt{
+	margin-left: 28%;
+}
+
+#no-map-img
+{
+	margin-left: 35%;
+}
