--- a/Resourse/cssSm/style.css
+++ b/Resourse/cssSm/style.css
@@ -3325,7 +3325,11 @@ html .ui-button.ui-state-disabled:active {
 	height: 300px;
 	width: 300px;
 	border:1px solid rgb(214, 214, 214) !important;
-	position: fixed !important;
+
+	position: fixed;
+	left: 50%;
+	top: 25%;
+	margin-left: 15%;
 	/*background: #fff;*/
 }
 
