--- a/Resourse/newhome/css/style.css
+++ b/Resourse/newhome/css/style.css
@@ -1054,7 +1054,8 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-footer {
-  background: #efefef;
+
+  background-color: transparent;
 }
 
 #fh5co-footer .fh5co-footer-links {
