--- a/Resourse/css2/styleUser.css
+++ b/Resourse/css2/styleUser.css
@@ -23226,3 +23226,13 @@ h2 {
   margin-left:40%;
   margin-top:5%;
 }
+.vr_pls
+{
+  width:50%;
+}
+.pop_save
+{
+  width:30%;
+  background-color: aquamarine;
+  border-color: aquamarine;
+}
