--- a/Resourse/helppage/css/bootstrap.css
+++ b/Resourse/helppage/css/bootstrap.css
@@ -479,7 +479,7 @@ mark,
 .img-fluid {
   max-width: 100%;
   height: auto;
-  visibility: hidden;
+  /*! visibility: hidden; */
 }
 
 .img-thumbnail {
