--- a/Resourse/css2/style.css
+++ b/Resourse/css2/style.css
@@ -23225,3 +23225,12 @@ height: 200px;
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdownE:hover .dropbtnE {background-color: #3e8e41;} 
 
+.radioC,.rtyy{
+margin-left: -194px;
+}
+.rtyy2{
+  margin-left: -385px;
+  }
+  .rtyy3{
+    margin-left: -194px;
+    }
