--- a/Resourse/css2/styleUser.css
+++ b/Resourse/css2/styleUser.css
@@ -23236,9 +23236,20 @@ h2 {
   max-width:100%;
   background-color: aquamarine;
   border-color: aquamarine;
+  margin-left: 54%;
+  margin-top: -14.8%;
 }
 .rated_sv
 {
+  margin-left:80%;
+  margin-top:0px;
+  margin-bottom:0px;
+  margin-right:0px;
+  border-radius:100%;
+  height: 40px;
+  width: 40px;
+}
+.rated_sv1{
   margin-left:80%;
   margin-top:0px;
   margin-bottom:0px;
