--- a/Resourse/newhome/css/bootstrap.css
+++ b/Resourse/newhome/css/bootstrap.css
@@ -892,6 +892,9 @@ pre code {
   .container {
     width: 1170px;
   }
+  #footertext {
+    margin-top: 110px !important;
+}
 }
 
 .container-fluid {
