--- a/Resourse/css2/StyleRe.css
+++ b/Resourse/css2/StyleRe.css
@@ -23411,3 +23411,166 @@ h2 {
   }*/
 
  
+ @media only screen and (min-width:1100px){
+.containerR{
+  display: grid;
+  grid-template-columns:5fr 5fr;
+}
+
+.grids{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.map{
+
+  position:sticky !important;
+  top:0 !important;
+  right:0 !important;
+  left:0 !important;
+  height:100vh;
+  margin-top:20px;
+
+  
+
+}
+}
+/*
+.leaflet-tooltip.price-tag {
+  display: inline-block;
+  -moz-border-radius-topright: 2px;
+  -webkit-border-top-right-radius: 2px;
+  border-top-right-radius: 2px;
+  -moz-border-radius-bottomright: 2px;
+  -webkit-border-bottom-right-radius: 2px;
+  border-bottom-right-radius: 2px;
+  height: 40px;
+  line-height: 40px;
+  padding: 0 10px;
+  color: #fff;
+  background-color: #bf1919;
+  text-shadow: 1px 1px 1px #921313;
+  font-weight: bold;
+  font-size: 1.1em;
+  text-indent: -6px;
+  position: relative;
+  -moz-transform-origin: 88% 10%;
+  -ms-transform-origin: 88% 10%;
+  -webkit-transform-origin: 88% 10%;
+  transform-origin: 88% 10%;
+}
+.leaflet-tooltip-left.price-tag::before {
+  content: "";
+  position: relative;
+  top: 0;
+  left: -20px;
+  width: 0;
+  height: 0;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  border-right: 20px solid #bf1919;
+  margin-left:50px;
+}
+.leaflet-tooltip-left.price-tag::after {
+  content: "";
+  position: absolute;
+  top: 10%;
+  left: 88%;
+  width: 5px;
+  height: 5px;
+  border-radius: 2.5px;
+  background-color: #cecece;
+  box-shadow: inset -1px 1px 0 #8e8e8e;
+  margin-left:50px;
+}
+
+.leaflet-tooltip-right.price-tag::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -20px;
+  width: 0;
+  height: 0;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  border-right: 20px solid #bf1919;
+}
+.leaflet-tooltip-right.price-tag::after {
+  content: "";
+  position: absolute;
+  top: 10%;
+  left: 88%;
+  width: 5px;
+  height: 5px;
+  border-radius: 2.5px;
+  background-color: #cecece;
+  box-shadow: inset -1px 1px 0 #8e8e8e;
+  
+}
+
+/* Build the price tag animation */
+/*
+ * TODO: Model the animation after a dampened harmonic oscillator.
+ * Right now it isn't too realistic.
+ */
+ #map_cntrl{
+   margin-left:90px;
+ }
+
+ #map_cntrl_map{
+  margin-left:20px;
+ }
+
+
+
+ .leaflet-popup-content-wrapper{
+padding:0px !important; 
+border:0px;
+width:260px;
+height:280px;
+max-width:260px;
+max-height:280px;
+
+ }
+ .leaflet-popup-tip {
+  display: none;
+}
+
+.leaflet-popup-close-button{
+  display: none;
+}
+.act_img{
+  width:260px;
+  margin-left:-19px;
+  height:180px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.pop_adrs{
+  
+  margin-left:-10px;
+  margin-top:5px;
+}
+.pop_prix{
+  
+  margin-left:-10px;
+  margin-top:5px;
+}
+.pop_title{
+  
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 16px;    
+  max-height: 32px;     
+  -webkit-line-clamp:1; /* Write the number of 
+                            lines you want to be 
+                            displayed */
+  -webkit-box-orient: vertical;
+  margin-left:-15px;
+  margin-top:10px;
+}
+ /*
+ .leaflet-popup {
+  padding:0px !important; 
+   }
+*/
