--- a/Resourse/css2/StyleRe.css
+++ b/Resourse/css2/StyleRe.css
@@ -22990,6 +22990,29 @@
     width: 100px; 
     text-decoration: none;
 }
+/*
+#map_cntrl {
+  position:fixed;
+ width:60px;
+ height:60px;
+ bottom:40px;
+ right:40px;
+ background-color:#242cd9;
+ color:#FFF;
+ border-radius:50px;
+ text-align:center;
+ box-shadow: 2px 2px 3px #999;
+   
+}
+.parag{
+  display:none;
+}
+#map_cntrl_map{
+  margin-top:15.5px;
+  margin-left:-1px !important;
+}
+*/
+
   }
 
 /*  @media (max-width: 360px) {
@@ -23410,7 +23433,7 @@ h2 {
     display: none;
   }*/
 
- 
+ /*
  @media only screen and (min-width:1100px){
 .containerR{
   display: grid;
@@ -23433,7 +23456,7 @@ h2 {
   
 
 }
-}
+}*/
 /*
 .leaflet-tooltip.price-tag {
   display: inline-block;
