--- a/Resourse/newhome/css/style.css
+++ b/Resourse/newhome/css/style.css
@@ -1586,4 +1586,9 @@ h1, h2, h3, h4, h5, h6, figure {
   border-bottom-left-radius: 0px !important;
 }
 
-/*# sourceMappingURL=style.css.map */
+/*new toggle btns
+ */
+#dropdown1Home{
+  margin-top: -60px !important;
+  margin-left: -300px !important;
+}
