--- a/Resourse/newhome/css/style.css
+++ b/Resourse/newhome/css/style.css
@@ -1589,24 +1589,24 @@ h1, h2, h3, h4, h5, h6, figure {
 /*new toggle btns
  */
 
- 
+ /*
 #price_drop_div{
-/*  width:50%;*/
+
   margin-left: 4% ;
   height: 100px;
   width:120px;
 }
 
-#price_drop_button{
-margin-top:-418%
-  
-}
+
 #price_drop{
 margin-top:-35%;
 margin-left: 7% ;
-}
-
-
+}*/
+#price_drop_button{
+ /* margin-top:-418%*/
+ margin-right: -15%;
+  }
+/*
 #Type_drop_div{
  
   margin-left: -11%;
@@ -1623,7 +1623,7 @@ margin-left: 7% ;
       margin-top:-118%;
       margin-left: 3% ;
       }
-      
+      */
 
 
 
