--- a/pages/samples/MapByProvinceWitouhNavBar/StyleRe.css
+++ b/pages/samples/MapByProvinceWitouhNavBar/StyleRe.css
@@ -23071,9 +23071,11 @@ visibility:hidden;
   .btn-primary
   {
     display:block;
-    border-radius:0px;
-    box-shadow:0px 4px 6px 2px rgba(0,0,0,0.2);
+    border-radius:5px;
+    /*! box-shadow:0px 4px 6px 2px rgba(0,0,0,0.2); */
     margin-top:-5px;
+    margin-left: -2px;
+    width: 350px;
   }
   .imgUp
   {
